Refactored LDAP-tests. Added minimal department check. Added User to use also department check. Added department to config-file.

--- a/config/ldap.yml
+++ b/config/ldap.yml
@@ -2,11 +2,14 @@ cs_helsinki_fi: &CS
      host: ldap1.cs.helsinki.fi
      base: dc=cs,dc=helsinki,dc=fi
      bind_dn: ou=People,dc=cs,dc=helsinki,dc=fi
-     required: true
 
 defaults: &defaults
      authentication:
           <<: *CS
+          required: true
+     department:
+          <<: *CS
+          required: true
 
 development:
      <<: *defaults
