--- a/jspec/jspec.yml
+++ b/jspec/jspec.yml
@@ -1,13 +1,14 @@
-required_libs:
-- prototype
-- effects
-- jspec_rails
-watched_dirs:
+authorization: 
+  rails_envs: 
+  - production
+  username: jspec
+  password: jspecpassword
+watched_dirs: 
 - public/javascripts
 - jspec/fixtures
 - jspec/spec
-authorization:
-  rails_envs: 
-   - production
-  username:  jspec
-  password:  jspecpassword
+required_libs: 
+- prototype
+- effects
+- jspec_rails
+- examinput
