Added lucy and babilu. Added jQuery with ui that contains only calendar. Added mockup javascript for exam input exam selection.

--- a/.bzrignore
+++ b/.bzrignore
@@ -16,5 +16,9 @@ coverage
 # Compiled stylesheets
 public/stylesheets/*.css
 
+# Lucy and Babilu generated JavaScripts
+public/javascripts/common.js
+public/javascripts/locales.js
+
 # configuration files
 config/database.yml
