--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -3,6 +3,7 @@
 development:
   adapter: sqlite3
   database: db/development.sqlite3
+  encoding: utf8
   pool: 5
   timeout: 5000
 
@@ -12,12 +13,14 @@ development:
 test: &TEST
   adapter: sqlite3
   database: db/test.sqlite3
+  encoding: utf8
   pool: 5
   timeout: 5000
 
 production:
   adapter: sqlite3
   database: db/production.sqlite3
+  encoding: utf8
   pool: 5
   timeout: 5000
 
