Added formula adding with few other changes.

--- a/.bzrignore
+++ b/.bzrignore
@@ -23,6 +23,10 @@ public/stylesheets/*.css
 public/javascripts/common.js
 public/javascripts/locales.js
 
+# JavaScript routes
+public/javascripts/routes-ajax.js
+public/javascripts/routes.js
+
 # configuration files
 config/database.yml
 config/ldap.yml
