--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: tarkisto
+  username: tarkisto
+  password: foobar
   encoding: utf8
   pool: 5
   timeout: 5000
@@ -11,15 +11,19 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &TEST
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: tarkisto-test
+  username: tarkisto
+  password: foobar
   encoding: utf8
   pool: 5
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: tarkisto-production
+  username: tarkisto
+  password: foobar
   encoding: utf8
   pool: 5
   timeout: 5000
