--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 before_script:
-  - "psql -c 'create database tarkisto-test;' -U postgres"
+  - "psql -c 'create database tarkisto_test;' -U postgres"
