--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,7 @@
 development:
   adapter: postgresql
-  database: tarkisto
-  username: tarkisto
-  password: foobar
+  database: tarkisto_development
+  username: postgres
   encoding: utf8
   pool: 5
   timeout: 5000
@@ -12,18 +11,16 @@ development:
 # Do not set this db to the same as development or production.
 test: &TEST
   adapter: postgresql
-  database: tarkisto-test
-  username: tarkisto
-  password: foobar
+  database: tarkisto_test
+  username: postgres
   encoding: utf8
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: tarkisto-production
-  username: tarkisto
-  password: foobar
+  database: tarkisto_production
+  username: postgres
   encoding: utf8
   pool: 5
   timeout: 5000
